--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Albert Sans';
+  src: url('./fonts/Albert_Sans/AlbertSans-VariableFont_wght.ttf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Ibarra Real Nova';
+  src: url('./fonts/Ibarra_Real_Nova/IbarraRealNova-VariableFont_wght.ttf');
+}
+
+body {
+  margin: 0;
+
+  font-family: 'Albert Sans', Arial, sans-serif;
 }
